# RPAL

./: .gitignore
hw1/: fortunes.txt
hw2/: README.md
hw2/icp/: CMakeLists.txt  README.md  main
hw2/icp/include/: icp.h
hw2/icp/src/: icp.cpp  main.cpp
hw2/problem4/: main  main.cpp
hw3/: CMakeLists.txt  backline  eightpoint.cpp
hw3/src/: backline.cpp  eightpoint.cpp
hw4_ws/: .gitignore  CMakeLists.txt  DepthCamera_2024-04-30-17-12-06.json
hw4_ws/.devcontainer/: Dockerfile  devcontainer.json
hw4_ws/src/: main.cpp
hw5_ws/.devcontainer/: Dockerfile  devcontainer.json  reinstall-cmake.sh:Zone.Identifier
lecture4/: CMakeLists.txt  main
lecture4/include/: print_test.h
lecture4/src/: print_test.cpp  program.cpp
lecture_ws/first_pkg/: CMakeLists.txt  package.xml
lecture_ws/first_pkg/src/: first_node.cpp
orbslam3/: .gitignore  README.md
orbslam3/.devcontainer/: Dockerfile  devcontainer.json
orbslam3/ORB_SLAM3/: CMakeLists.txt
orbslam3/ORB_SLAM3/Examples/Monocular/: mono_euroc.cc
